tests/machine/x/python/group_by_left_join.error
run: exit status 1
--- Group Left Join ---
Traceback (most recent call last):
  File "/workspace/mochi/tests/machine/x/python/group_by_left_join.py", line 189, in <module>
    print(s["name"], "orders:", s["count"])
          ~^^^^^^^^
TypeError: 'Auto2' object is not subscriptable

